Some improvements to CMakeFile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,21 @@ if (APPLE)
 endif()
 
 if (WIN32)
-	set_source_files_properties(${CMAKE_SOURCE_DIR}/res.rc LANGUAGE RC)
+	set_source_files_properties(${PROJECT_SOURCE_DIR}/recources/resources.rc LANGUAGE RC)
+
+	if(MINGW)
+        set(CMAKE_RC_COMPILER_INIT windres)
+        ENABLE_LANGUAGE(RC)
+        SET(CMAKE_RC_COMPILE_OBJECT
+        "<CMAKE_RC_COMPILER> <FLAGS> <DEFINES> -o <OBJECT> <SOURCE>")
+        set(RC_CFLAGS "-DMINGW -Ocoff")
+        # If any sort of debugging is being enabled, add a _DEBUG define to the flags for the resource compiler
+        #if(CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
+        #   set(RC_CFLAGS "${RC_CFLAGS} -D_DEBUG")
+        #endif(CMAKE_BUILD_TYPE STREQUAL "DEBUG" OR CMAKE_BUILD_TYPE STREQUAL "RELWITHDEBINFO")
+        set_source_files_properties(${PROJECT_SOURCE_DIR}/recources/resources.rc COMPILE_FLAGS "${RC_CFLAGS}")
+    endif(MINGW)
+
 	add_executable(${PROJECT_NAME} WIN32 main.cpp)						# Create executable with the name of a project add WIN32
 endif()
 
