feature(linux): added installation into building process

--- a/resources/glfw_based_gui.desktop
+++ b/resources/glfw_based_gui.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=GLFW Based GUI
 GenericName=GLFW GUI
 Comment=Test bed for GLFW based graphic user interface
-Exec=/usr/bin/glfw-based-gui
+Exec=/usr/bin/TileZed
 Icon=/usr/share/icons/hicolor/64x64/apps/glfw_based_gui.png
-Categories=Utility;
+Categories=Utility
 
